Blog readability fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -2302,3 +2302,26 @@ span.sub {
 
 @import 'media-queries';
 @import 'social';
+
+.blog {
+
+  p {
+
+      font-family: minion-pro, serif;
+      text-rendering: optimizeLegibility;
+      -webkit-font-feature-settings: "liga", "dlig";
+      -moz-font-feature-settings:"liga=1, dlig=1";
+      -moz-font-feature-settings:"liga", "dlig";
+      -ms-font-feature-settings: "liga", "dlig";
+      -o-font-feature-settings: "liga", "dlig";
+      font-feature-settings: "liga", "dlig";
+      color: black;
+
+      width: 700px !important;
+      margin-bottom: 30px;
+
+     i { font-family: freight-text-pro, serif; }
+
+  }
+
+}
